@@ -1,5 +1,8 @@
 Changes for APR 1.1.0
 
+  *) Add support for APR_TCP_DEFER_ACCEPT.
+     [Paul Querna]
+
   *) rename the apr_file_permissions defines (APR_UREAD,
      APR_UWRITE, etc.) to have prefix APR_FPROT_ (keeping the
      old defines) [Stas]
